kubernetes/apps/talos1018/observability/ntfy/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.30.0/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: ntfy
    gethomepage.dev/name: ntfy
    gethomepage.dev/app: ntfy
    gethomepage.dev/description: Push notifications
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https-external
  hostnames:
    - "ntfy.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000
      backendRefs:
        - name: ntfy
          port: 80
